# task_sim_nimbus_bridge

./: CMakeLists.txt  README.md  package.xml
config/: segmentation_zones.yaml  segmentation_zones_back.yaml
data/: object_labels.yaml  object_labels_all.yaml  object_labels_back.yaml  random_forest.pkl  random_forest_back.pkl  random_forest_no_tape.pkl
include/task_sim_nimbus_bridge/: bounding_box_calculator.h  controller.h  object_data_collector.h  robot_executor.h  state_calculator.h
launch/: camera_calibration.launch  execution.launch  nimbus_bringup.launch  perception.launch  train_rl.launch
markers/: MarkerData_1_2_3_4_5_6.xml
msg/: BoundingBox.msg
nodes/: controller_node.cpp  object_data_collector.cpp  robot_executor_node.cpp  state_calculator_node.cpp
scripts/: classify_object.py  train_object_classifier.py
src/: bounding_box_calculator.cpp  controller.cpp  robot_executor.cpp  state_calculator.cpp
srv/: CorrectPose.srv  UpdateState.srv
